--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
-<!--
-  ** NOTE **
-
-  Run `grunt connect` then
-  navigate to http://localhost:3000/demo
-  to see this page in browser
-
-  -->
 <html>
   <head>
     <meta charset="utf-8" />
-    <base href="/demo/" />
     <title>Mobile Angular UI Examples</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
-    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
-    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
-    <link rel="stylesheet" href="demo.css" />
+
+    <link rel="stylesheet" href="../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-hover.css" />
+    <link rel="stylesheet" href="../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-base.css" />
+    <link rel="stylesheet" href="../bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-desktop.css" />
+    <link rel="stylesheet" href="app.css" />
+
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-touch.min.js"></script>
-    <script src="/dist/js/mobile-angular-ui.min.js"></script>
-    <script src="demo.js"></script>
+
+    <script src="../bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.js"></script>
+    <script src="app.js"></script>
   </head>
   <body ng-app="MobileAngularUiExamples" ng-controller="MainController">
 
     <!-- Sidebars -->
-    <div ng-include="'sidebar.html'" class="sidebar sidebar-left" toggleable parent-active-class="sidebar-left-in" id="mainSidebar"></div>
+    <div ng-include="'views/sidebar.html'" class="sidebar sidebar-left" toggleable parent-active-class="sidebar-left-in" id="mainSidebar"></div>
 
-    <div ng-include="'sidebarRight.html'" class="sidebar sidebar-right" toggleable parent-active-class="sidebar-right-in" id="rightSidebar"></div>
+    <div ng-include="'views/sidebarRight.html'" class="sidebar sidebar-right" toggleable parent-active-class="sidebar-right-in" id="rightSidebar"></div>
 
     <div class="app">
 
